# Qific_Butler

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  brand.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Button.css  Button.tsx  Card.css  Card.tsx  Charts.tsx  Icon.tsx  MarkdownRenderer.tsx  RollingNumber.tsx  Sidebar.css  Sidebar.tsx
src/sections/: AIAssistant.tsx  Cleanup.tsx  Dashboard.tsx  FileManager.tsx  Settings.tsx  sys.ts
