[package]
name = "qific-butler"
version = "0.1.0"
description = "AI desktop butler for system monitoring, file discovery, and safe cleanup planning."
authors = ["Qific Butler Contributors"]
license = "GPL-3.0-only"
repository = "https://github.com/richyhu/Qific_Butler"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "qific_butler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.39.5"
dirs = "6"
walkdir = "2"
trash = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["io-util", "process", "time"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
io-kit-sys = "0.5"
smc = "0.2.4"
